use :global for .Mui-error

--- a/src/components/FilledInput.module.css
+++ b/src/components/FilledInput.module.css
@@ -21,7 +21,7 @@
 }
 
 @layer mui-components-error {
-  .Mui-error:has(input) .activeIndicator {
+  :global(.Mui-error):has(input) .activeIndicator {
     --background: var(--md-sys-color-error);
   }
 }
