--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -5,22 +5,24 @@
 }
 
 .MuiSlider-track {
+  position: relative;
   height: 16px;
   border-radius: 2px;
   overflow: hidden; /* for hiding the dot indicators */
   transition: 0.2s;
 
   &:where(:first-child) {
-    border-top-left-radius: 16px;
-    border-bottom-left-radius: 16px;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
   }
 
   &:where(:last-child) {
-    border-top-right-radius: 16px;
-    border-bottom-right-radius: 16px;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
   }
 
   &:where(.MuiSlider-activeTrack) {
+    color: var(--md-sys-color-on-primary);
     background: var(--md-sys-color-primary);
     width: calc(
       var(--handle-position) - var(--md-comp-slider-handle-space, 6px) -
@@ -28,6 +30,7 @@
     ); /* account for handle space and width */
   }
   &:where(.MuiSlider-inactiveTrack) {
+    color: var(--md-sys-color-on-secondary-container);
     background: var(--md-sys-color-secondary-container);
     flex: 1;
   }
@@ -56,6 +59,13 @@
   color: var(--md-sys-color-primary);
   cursor: pointer;
   position: relative;
+  transition: padding 0.2s;
+  border-radius: 2px;
+
+  &:focus-visible {
+    outline: 2px solid var(--md-sys-color-primary);
+    outline-offset: 2px;
+  }
 
   &::before {
     content: "";
@@ -72,5 +82,28 @@
 :where(.Mui-pressed) .MuiSlider-handle {
   &::before {
     width: var(--md-comp-slider-handle-pressed-width, 2px);
+  }
+}
+
+.MuiSlider-stopIndicator {
+  background: currentColor;
+  color: inherit;
+  display: inline-block;
+  width: 4px;
+  height: 4px;
+  border-radius: var(--md-sys-shape-corner-full);
+}
+
+:where(.MuiSlider-discrete) .MuiSlider-stopIndicator {
+  position: absolute;
+  top: calc(50% - 4px / 2);
+  &:first-of-type {
+    left: 6px;
+  }
+  &:not(:first-of-type):not(:last-of-type) {
+    margin-left: calc(var(--index) * 10% - 12px);
+  }
+  &:last-of-type {
+    right: 6px;
   }
 }
